--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@ body{
         <div class="card">
             <a href="Day 12/">DAY 12</a>
         </div>
+        <div class="card">
+            <a href="Day 13/">DAY 13</a>
+        </div>
     </section>
 
     <!-- <script src="app.js" "></script> -->
