--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@ body{
         <div class="card">
             <a href="Day 13/">DAY 13</a>
         </div>
+        
+        <div class="card">
+            <a href="day_17/build/">DAY 17</a>
+        </div>
     </section>
 
     <!-- <script src="app.js" "></script> -->
