--- a/index.html
+++ b/index.html
@@ -115,7 +115,28 @@ body{
         </div>
         
         <div class="card">
+            <a href="Day 14/">DAY 14</a>
+        </div>
+        <div class="card">
+            <a href="day_15/build/">DAY 15</a>
+        </div>
+        <div class="card">
+            <a href="day_16/build/">DAY 16</a>
+        </div>
+        <div class="card">
             <a href="day_17/build/">DAY 17</a>
+        </div>
+        <div class="card">
+            <a href="day_18/build/">DAY 18</a>
+        </div>
+        <div class="card">
+            <a href="day_19/build/">DAY 19</a>
+        </div>
+        <div class="card">
+            <a href="day_20/build/">DAY 20</a>
+        </div>
+        <div class="card">
+            <a href="day_21/build/">DAY 21</a>
         </div>
     </section>
 
